# silk-python-sdk

./: LICENSE  README.md  pyproject.toml  requirements.txt
examples/: create_host_example.py  workflow_example.py
silk/: __init__.py  exceptions.py
silk/api/__init__.py/: clients.py       # API client logic
silk/api/__init__.py/hosts.py         # Functions for creating/: modifying hosts
silk/utils/: __init__.py  helpers.py
silk/workflows/: example_workflow.py  # Advanced workflow examples
tests/: test_hosts.py  test_workflows.py
